# ICRA2018_DJI_RM_AI_Challenge_NJUST

./: LICENSE  README.md
docs/: Tutorials.docx  doc_tree.txt
infantry_2dnav/: CMakeLists.txt  package.xml
infantry_2dnav/config/: base_local_planner_params.yaml  infantry_navigation.rviz  local_costmap_params.yaml
infantry_2dnav/launch/: amcl_infantry.launch  move_base.launch  teleop_joy.launch
infantry_2dnav/map/: icra.yaml
infantry_2dnav/src/: teleop_joy.cpp
infantry_teleop_tools/joystick_teleop/: CMakeLists.txt  package.xml
infantry_teleop_tools/joystick_teleop/launch/: joystick_teleop.launch
infantry_teleop_tools/keyboard_teleop/: CMakeLists.txt  package.xml
robots_description/infantryb/: CMakeLists.txt  package.xml
robots_description/infantryb/config/: infantry_control.yaml  infantry_control_copy.yaml  infantryb.yaml  joint_names_infantryb.yaml
robots_description/infantryb/launch/: display.launch  gazebo.launch  gazebo_color.launch  gazebo_mapping.launch  simulation_environments.launch  spawn_infantry_blue.launch  spawn_infantry_red.launch
robots_description/infantryb/meshes/: bl_wheel_Link.STL  camera_Link.STL  fl_wheel_Link.STL  laser_Link.STL  led_Link.STL  pitch_Link.STL  yaw_Link.STL
robots_description/infantryb/robots/: infantry.gazebo  infantry.gazebo.xacro  infantry.transmission.xacro  infantry.xacro  infantry_blue.xacro  infantry_copy.transmission.xacro  infantry_processed.urdf  infantry_red.xacro  infantryb.urdf  infantryb.urdf.xacro
vision/infantry_vision/: CMakeLists.txt  package.xml
vision/infantry_vision/src/: settings.cpp  (+6 more)
(+4 files in other folders)
